src/test/ui/hygiene/shadow-static-2.stderr
error[E0530]: let bindings cannot shadow statics
  --> $DIR/shadow-static-2.rs:13:7
   |
LL |     static x: usize = 3;
   |     -------------------- the static `x` is defined here
...
LL |   let x = 2;
   |       ^ cannot be named the same as a static

error: aborting due to previous error

For more information about this error, try `rustc --explain E0530`.
